<resources>
    <string name="app_name">MyCalc</string>
    <string name="equals_string">=</string>
    <string name="clear_string">Clr</string>
    <string name="plus_string">+</string>
    <string name="decimal_string">.</string>
    <string name="zero_string">0</string>
    <string name="one_string">1</string>
    <string name="two_string">2</string>
    <string name="three_string">3</string>
    <string name="subtract_string">-</string>
    <string name="seven_string">7</string>
    <string name="eight_string">8</string>
    <string name="nine_string">9</string>
    <string name="divide_string">/</string>
    <string name="four_string">4</string>
    <string name="five_string">5</string>
    <string name="six_string">6</string>
    <string name="multiply_string">*</string>
</resources>